descriptions added to jewelry page

--- a/jewelry.html
+++ b/jewelry.html
@@ -30,7 +30,7 @@
     <a target="_blank" href="images/earring1.jpg">
       <img src="images/earring1.jpg" alt="earring2">
     </a>
-    <div class="desc">The owner and maker</div>
+    <div class="desc">Turkhead Earrings $20.00 </div>
   </div>
 </div>
 
@@ -40,7 +40,7 @@
   <a target="_blank" href="images/earring2.jpg">
     <img src="images/earring2.jpg" alt="earring2">
   </a>
-  <div class="desc">The owner and maker</div>
+  <div class="desc">Monkey's Fist Earrings $20.00 </div>
 </div>
 </div>
 
@@ -49,7 +49,7 @@
   <a target="_blank" href="images/necklace.jpg">
     <img src="images/necklace.jpg" alt="necklace">
   </a>
-  <div class="desc">The owner and maker</div>
+  <div class="desc">Necklaces $35.00</div>
 </div>
 </div>
 
@@ -58,7 +58,7 @@
   <a target="_blank" href="images/wristlet.jpg">
     <img src="images/wristlet.jpg" alt="owner">
   </a>
-  <div class="desc">The owner and maker</div>
+  <div class="desc">Wristlets $22.00</div>
 </div>
 </div>
 
@@ -67,7 +67,7 @@
   <a target="_blank" href="images/cufflink.jpg">
     <img src="images/cufflink.jpg" alt="owner">
   </a>
-  <div class="desc">The owner and maker</div>
+  <div class="desc">Gentleman's cufflinks $120.00/set</div>
 </div>
 </div>
 
