index re-worked title, font, and css linked

--- a/index.html
+++ b/index.html
@@ -1,108 +1,8 @@
-<<<<<<< HEAD
-<html>
-=======
+<!--landing page-->
 <!DOCTYPE html>
-<html lang="en">
->>>>>>> gh-pages
-  <head>
-    <meta charset="utf-8">
-    <title> Frayed Knot Arts </title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-<<<<<<< HEAD
+<html lang="en"
+<head>
+  <title>Frayed Knot Arts</title>
+    <link href="https://fonts.googleapis.com/css?family=Baskervville&display=swap" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-
-  <body>
-    <header>
-      <div class="logo"> <!-- logo for company -->
-        <h1> Frayed Knot Arts </h1> <!--use font instead of logo for title-->
-        <p><strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
-          I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
-          Feel free to click around to the knots and jewelry pages to see some of the current products we offer. </strong></p>
-        </header>
-      <div class="navigation"> <!--navigation for the other pages -->
-        <ul>
-          <li><a href="index.html"> Home </a></li>
-          <li>
-            <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
-              <li> <a href="Knots.html"> Knots </a></li>
-              <li> <a href="Jewelry.html"> Jewelry </a></li>
-            </ul>
-          </li>
-          </ul>
-      </div>
-
-      <div class = "images"> <!--images for the first page-->
-        <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
-        <img id="pouch" src="Images/pouch.png" alt="pouch">
-        <img id="workstation" src="Images/workStation.png" alt="workstation">
-        <img id="stairs" src="Images/stairs.png" alt="stairs">
-        </div>
-
-
-  </body>
-  </html>
-=======
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
-  </head>
-
-<body>
-  <h1> Home </h1>
-  <div class="Indexnavigation"> <!--navigation for the other pages -->
-    <ul>
-      <li> <a id="a1" href="index.html"> Home </li> </a>
-      <li> <a id="a2" href="knots.html"> Knots </li> </a>
-      <li> <a id="a3" href="jewelry.html"> Jewelry </li> </a>
-      <li> <a id="a4" href="login.html"> Login </li> </a>
-    <ul>
-  </div>
-<div class="border"
-  <p>
-    <strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
-          I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
-          Feel free to click around to the knots and jewelry pages to see some of the current products we offer.
-    </strong>
-  </p>
-
-  <div class="responsive">
-  <div class="images">
-    <a target="_blank" href="images/ownerpic.jpg">
-      <img src="images/ownerpic.jpg" alt="owner">
-    </a>
-    <div class="desc">The owner and maker</div>
-  </div>
-</div>
-
-
-  <div class="responsive">
-  <div class="images">
-    <a target="_blank" href="images/pouch.jpg">
-      <img src="images/pouch.jpg" alt="pouch">
-    </a>
-    <div class="desc">Handcrafted pouch</div>
-  </div>
-</div>
-
-
-<div class="responsive">
-  <div class="images">
-    <a target="_blank" href="images/workstation.jpg">
-      <img src="images/workstation.jpg" alt="workstation">
-    </a>
-    <div class="desc">One of the many workstations we use to handcraft goods</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="images">
-    <a target="_blank" href="images/stairs.jpg">
-      <img src="images/stairs.jpg" alt="stairs">
-    </a>
-    <div class="desc">Hand Coxcombed stairs</div>
-  </div>
-</div>
-</div>
-</body>
-</html>
->>>>>>> gh-pages
