--- a/jewelry.html
+++ b/jewelry.html
@@ -1,110 +1,113 @@
-<<<<<<< HEAD
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title> Jewelry</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <h1> Jewelry</h1>
-    <div class="navigation"> <!--navigation for the other pages -->
-      <ul>
-          <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
-            <li> <a href="index.html"> Home </a></li>
-            <li> <a href="Jewelry.html"> Jewelry </a></li>
-          </ul>
-        </ul>
-      </div>
-<p><strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
-  To discuss product pricing and specifics contact me here." </strong></p>
-
-<div class="images">
-  <img id="earringsflat1" src="Images/earring1.png" alt="earing">
-  <img id="earringsround1" src="Images/earring2.png" alt="earing">
-  <img id="necklace" src="Images/necklace.png" alt="necklace">
-  <img id="wristlet" src="Images/wristlet.png" alt="necklace">
-  <img id="cuffink" src="Images/cufflink.png" alt="cufflink">
-</div>
-
-  </body>
-
-=======
+<!--jewelry page-->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Jewelry</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
-  </head>
+<html lang="en"
+<head>
+  <title>Frayed Knot Arts</title>
+  <link href="https://fonts.googleapis.com/css?family=Baskervville&display=swap" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="css/reset.css">
+</head>
 
 <body>
-  <h1> Jewelry</h1>
-  <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
-    <ul>
-      <li> <a id="a1" href="index.html"> Home </li> </a>
-      <li> <a id="a2" href="knots.html"> Knots </li> </a>
-      <li> <a id="a3" href="jewelry.html"> Jewelry </li> </a>
-      <li> <a id="a4" href="login.html"> Login </li> </a>
-    <ul>
-  </div>
-  <p>
-    <strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
-  To discuss product pricing and specifics contact me here.
-    </strong>
-  </p>
 
+<div class="nav">
+  <a class="active" href="jewelry.html">Jewelry</a>
+  <a href="index.html">Home</a>
+  <a href="knots.html">Products</a>
+  <div class="login">
+    <form action="/action_page.php">
+      <input type="text" placeholder="your@email.com" name="email">
+      <input type="text" placeholder="password" name="password">
+      <button type="submit">Login</button>
+    </form>
+    </div>
+</div>
 
-  <div class="responsive">
+<h1 id="products">Jewelry</h1>
+
+<div class="jewlery">
+  <p id="p14">Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.</p>
+</div>
+
+<div class="earrings">
+  <p id="p13"> We have a wide selection of earrings that can be customized in size and color! </p>
+</div>
+
+<div class="responsive">
   <div class="images">
-    <a target="_blank" href="images/earring1.jpg">
-      <img src="images/earring1.jpg" alt="earring2">
+    <a target="_blank" href="images/j1.png">
+      <img src="images/j1.png" alt="formalLanyard">
     </a>
-    <div class="desc">Turkhead Earrings $20.00 </div>
+    <div class="desc">Turkshead Earrings $20.00/pair</div>
   </div>
 </div>
 
-
 <div class="responsive">
-<div class="images">
-  <a target="_blank" href="images/earring2.jpg">
-    <img src="images/earring2.jpg" alt="earring2">
-  </a>
-  <div class="desc">Monkey's Fist Earrings $20.00 </div>
-</div>
-</div>
-
-<div class="responsive">
-<div class="images">
-  <a target="_blank" href="images/necklace.jpg">
-    <img src="images/necklace.jpg" alt="necklace">
-  </a>
-  <div class="desc">Necklaces $35.00</div>
-</div>
+  <div class="images">
+    <a target="_blank" href="images/j2.png">
+      <img src="images/j2.png" alt="chiefJimmy">
+    </a>
+    <div class="desc">Monkey's Fist Earrings $20.00/pair</div>
+  </div>
 </div>
 
 <div class="responsive">
-<div class="images">
-  <a target="_blank" href="images/wristlet.jpg">
-    <img src="images/wristlet.jpg" alt="owner">
-  </a>
-  <div class="desc">Wristlets $22.00</div>
-</div>
+  <div class="images">
+    <a target="_blank" href="images/j3.png">
+      <img src="images/j3.png" alt="plainLanyard">
+    </a>
+    <div class="desc">Starknot Earrings $30.00/set</div>
+  </div>
 </div>
 
 <div class="responsive">
-<div class="images">
-  <a target="_blank" href="images/cufflink.jpg">
-    <img src="images/cufflink.jpg" alt="owner">
-  </a>
-  <div class="desc">Gentleman's cufflinks $120.00/set</div>
-</div>
+  <div class="images">
+    <a target="_blank" href="images/j4.png">
+      <img src="images/j4.png" alt="blackLanyard">
+    </a>
+    <div class="desc">shepherd's Crook Earrings $30.00/pair</div>
+  </div>
 </div>
 
+<div class="others">
+  <p id="p15"> We also offer wristlets, cufflinks, and more! </p>
+</div>
+
+<div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/j5.png">
+      <img src="images/j5.png" alt="formalLanyard">
+    </a>
+    <div class="desc">Wristlet $20.00/pair</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/j6.png">
+      <img src="images/j6.png" alt="chiefJimmy">
+    </a>
+    <div class="desc">Necklaces $35.00</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/j7.png">
+      <img src="images/j7.png" alt="plainLanyard">
+    </a>
+    <div class="desc">Necklace, Wristlet, and Dangles($10.00)</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/j8.png">
+      <img src="images/j8.png" alt="blackLanyard">
+    </a>
+    <div class="desc">Gentlemen's Cufflinks $120.00/set</div>
+  </div>
+</div>
 
 </body>
->>>>>>> gh-pages
 </html>
