--- a/login.html
+++ b/login.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+
+  <div class="nav">
+    <a class="active" href="home">Home</a>
+    <a href="knots.html">Products</a>
+    <a href="jewelry.html">Jewlery</a>
+    <a id="login" href="login.html">Login</a>
+  </div>
+  
 <form method="POST" action="#" autocomplete="on">
 <div id="sign">
   <h3>Sign up</h3>
