css linked to login page

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/loginstyle.css" />
+  <link rel="stylesheet" media="screen" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <a href="jewelry.html">Jewlery</a>
     <a id="login" href="login.html">Login</a>
   </div>
-  
+
 <form method="POST" action="#" autocomplete="on">
 <div id="sign">
   <h3>Sign up</h3>
