--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a class="active" href="home">Home</a>
   <a href="knots.html">Products</a>
   <a href="jewelry.html">Jewlery</a>
-  <a id="login" href="login.html">Login</a>
+  <a class="login" href="login.html">Login</a>
 </div>
 
 <div class="intro">
