login header css added

--- a/login.html
+++ b/login.html
@@ -22,8 +22,10 @@
   </div>
 
 <form method="POST" action="#" autocomplete="on">
+
 <div id="sign">
-  <h3>Sign up</h3>
+
+  <h3 id="loginheader">Sign up</h3>
    <div>
     <label for="first">
       First Name
