--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="nav">
-  <a class="active" href="home">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="knots.html">Products</a>
   <a href="jewelry.html">Jewlery</a>
   <a class="login" href="login.html">Login</a>
