--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="nav">
-    <a class="active" href="home">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="knots.html">Products</a>
     <a href="jewelry.html">Jewlery</a>
     <a id="login" href="login.html">Login</a>
