--- a/jewelry.html
+++ b/jewelry.html
@@ -14,7 +14,7 @@
   <a class="active" href="jewelry.html">Jewelry</a>
   <a href="index.html">Home</a>
   <a href="knots.html">Products</a>
-  <a id="login" href="login.html">Login</a>
+  <a class="login" href="login.html">Login</a>
 </div>
 
 <h1 id="products">Jewelry</h1>
