--- a/knots.html
+++ b/knots.html
@@ -14,7 +14,7 @@
   <a class="active" href="knots.html">Products</a>
   <a href="index.html">Home</a>
   <a href="jewelry.html">Jewlery</a>
-  <a id="login" href="login.html">Login</a>
+  <a class="login" href="login.html">Login</a>
 </div>
 
 <h1 id="products">Products</h1>
