--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="knots.html">Products</a>
     <a href="jewelry.html">Jewlery</a>
-    <a id="login" href="login.html">Login</a>
+    <a class="login" href="login.html">Login</a>
   </div>
 
 <form method="POST" action="#" autocomplete="on">
